modules/aws/route_table/main.tf
resource "aws_route_table" "public_rt" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.gateway_id
  }
  tags = {
    Name = "cp-rtb-public-${var.env}"
  }
}

resource "aws_route_table_association" "public" {
  for_each       = toset(var.public_subnet_ids)
  route_table_id = aws_route_table.public_rt.id
  subnet_id      = each.value
}

resource "aws_route_table" "private_rt" {
  vpc_id = var.vpc_id

  # NATがまだない時の対応
  dynamic "route" {
    for_each = var.network_interface_id != null ? [1] : []
    content {
      cidr_block           = "0.0.0.0/0"
      network_interface_id = var.network_interface_id
    }
  }
  tags = {
    Name = "cp-rtb-private-${var.env}"
  }
}

resource "aws_route_table_association" "private" {
  for_each       = toset(var.private_subnet_ids)
  route_table_id = aws_route_table.private_rt.id
  subnet_id      = each.value
}
